# Retrieval-based-Voice-Conversion-MLX

./: .gitignore  CLAUDE.md  README.md  TERMS_OF_USE.md  check_all_models.py  check_mlx_ops.py  context.md  convert_model_for_ios.py  debug_nan_step2.py  implementation_plan.md.resolved  pyproject.toml  pytest.ini  requirements.txt  run_comparative_benchmark.sh  rvc-mlx-cli.py  rvc_cli.py  test_all_f0_methods.py  test_bn.swift  test_conv_trans.swift  test_hubert_dimension.py  test_index_parity.py  test_rvc_all_methods.py
Demos/Mac/: Package.resolved  Package.swift  test_bn_params.swift
Demos/iOS/: AUDIO_QUALITY_DEBUG.md  AUDIO_QUALITY_FIX.md  BATCHNORM_FIX_VALIDATION.md  VALIDATION_FRAMEWORK_COMPLETE.md  VALIDATION_GUIDE.md  WEIGHT_CONVERSION.md  debug_python_inference.py  iOS_REWRITE_PLAN.md  test_filter_coefficients.py
benchmarks/: BENCHMARK_RESULTS.md  README.md  benchmark_audio_parity.py  benchmark_components.py  benchmark_e2e.py  benchmark_rmvpe.py  benchmark_rvc_full.py  debug_unet_channels.py  debug_with_weights.py  test_full_pipeline.py  test_mlx_vs_torch.py  test_rmvpe_chunking.py  test_rmvpe_chunking_simple.py
docs/: BENCHMARKS.md  CONSOLIDATION_ANALYSIS.md  INFERENCE_PARITY_ACHIEVED.md  IOS_DEVELOPMENT.md  MLX_PYTHON_SWIFT_DIFFERENCES.md  MLX_TRAINING_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PYTORCH_MLX_DIFFERENCES.md  PYTORCH_MLX_SWIFT_DIFFERENCES.md  PYTORCH_VS_MLX_TRAINING.md  README.md  RMVPE_OPTIMIZATION.md  SWIFT_FAISS_PARSER.md  TRAINING_STABILITY_FIXES.md  context.md
ios_test_data/: hubert_features.npy  input_audio.npy  metadata.json  rmvpe_f0.npy  rmvpe_hidden.npy
rvc/infer/: infer.py  (+1 more)
tests/: __init__.py  conftest.py  test_pitch_extractors.py
tools/: README.md  check_batchnorm.py  check_conv_transpose_order.py  check_hubert.py  check_hubert_weights.py  check_layernorm.py  check_linear_shape.py  check_mlx_ops.py  check_mlx_shapes.py  check_weights.py  compare_audio.py  compare_bigru_real_data.py  compare_correlation.py  compare_encoder_layers.py  compare_gru_weights.py  compare_inference.py  compare_layers.py  compare_models.py  compare_pytorch.py  compare_rvc_full.py  compare_synthesizer.py  compare_synthesizer_layers.py  compare_unet_layers.py  compare_upstream.py  compare_wavs.py  convert_coder_standalone.py  convert_crepe_weights.py  convert_for_ios.py  convert_hubert.py  convert_index_for_ios.py  convert_model_for_ios.py  convert_models_for_ios.py  convert_npz_to_safetensors.py  convert_pth_to_mlx.py  convert_rmvpe.py  convert_rmvpe_weights.py  convert_rvc_model.py  debug_attention.py  debug_encoder.py  debug_encoder_block.py  (+40 more)
(+151 files in other folders)
