[project]
name = "rvc-mlx"
version = "0.1.0"
description = "Retrieval-based Voice Conversion ported to Apple MLX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "RVC-MLX Contributors" }
]

dependencies = [
    # Core dependencies
    "pip>=23.3; sys_platform == 'darwin'",
    "wheel; sys_platform == 'darwin'",
    "PyYAML; sys_platform == 'darwin'",
    "numpy<2",
    "requests",
    "tqdm",
    "wget",

    # MLX (Apple Silicon ML Framework)
    "mlx; sys_platform == 'darwin'",

    # Audio processing
    "ffmpeg-python",
    "faiss-cpu==1.7.4",
    "librosa",
    "scipy",
    "soundfile",
    "noisereduce",
    "pedalboard",
    "stftpitchshift",
    "soxr",

    # Machine learning and deep learning
    "omegaconf; sys_platform == 'darwin'",
    "numba==0.60.0",
    "torch==2.4.0; sys_platform == 'darwin'",
    "torchaudio==2.4.0; sys_platform == 'darwin'",
    "torchvision==0.19.0; sys_platform == 'darwin'",

    # Transformers and model utilities
    "einops",
    "transformers",
    "beautifulsoup4",
    "llvmlite",

    # Visualization and benchmarking
    "matplotlib",
    "tensorboard",
    "tensorboardX",

    # Miscellaneous utilities
    "certifi; sys_platform == 'darwin'",
    "antlr4-python3-runtime",
    "edge-tts",
    "webrtcvad",

    # Pitch detection
    "pyworld>=0.3.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rvc_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "parity: marks tests that check MLX vs PyTorch parity",
    "requires_model: marks tests that require model weights",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["rvc_mlx"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
